# policy-forge

./: LICENSE  README.md  package-lock.json  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  api.ts  main.tsx
frontend/src/components/: Forge.tsx  IntentForm.tsx  PolicyDisplay.tsx
src/backend/: main.py
src/backend/api/: routes.py  schemas.py
src/backend/api/routes/: __init__.py  examples.py  health.py  intent.py  policy.py
src/cli/: main.py
src/frontend/: index.html  package-lock.json  package.json  vite.config.ts
src/frontend/src/: App.tsx  main.tsx
src/frontend/src/components/: DownloadPolicies.tsx  ExampleGenerator.tsx  ExampleLabeler.tsx  Forge.tsx  ForgeContext.tsx  IntentForm.tsx  PolicyDisplay.tsx
src/policy_forge/: __main__.py  example_gen.py  formatters.py  intent_builder.py  policy_writer.py  refiner.py  reviewer.py  schema.py  writer.py
